# zbus_universal_data_gateway

./: .gitignore  Cargo.toml  Makefile  README.md
Interfaces/: clickhouse.sql  v2_zabbix_example.json  zabbix_alerts.json
examples/: logs_classification.hjson
scripts/: denier.rhai  helloworld.rhai
src/: main.rs
src/cmd/: mod.rs  setloglevel.rs  zabbix_lib.rs  zbus_alerts.rs  zbus_alerts_processor.rs  zbus_alerts_processor_filter.rs  zbus_alerts_processor_transformation.rs  zbus_alerts_zabbix.rs  zbus_api.rs  zbus_api_rpc.rs  zbus_convertkey.rs  zbus_gateway.rs  zbus_gateway_catcher_nats.rs  zbus_gateway_catcher_prometheus_scraper.rs  zbus_gateway_catcher_rhai.rs  zbus_gateway_catcher_syslogd.rs  zbus_gateway_catcher_zabbix.rs  zbus_gateway_catcher_zbus.rs  zbus_gateway_clickhouse_sender.rs  zbus_gateway_mqtt_sender.rs  zbus_gateway_nats_sender.rs  zbus_gateway_processor.rs  zbus_gateway_processor_analysis.rs  zbus_gateway_processor_filter.rs  zbus_gateway_processor_logs_analysis.rs  zbus_gateway_processor_passthrough.rs  zbus_gateway_processor_pipeline.rs  zbus_gateway_processor_prometheus.rs  zbus_gateway_processor_transformation.rs  zbus_gateway_rhai_sender.rs  zbus_gateway_statsd_sender.rs  zbus_gateway_stdout_sender.rs  zbus_gateway_tcpsocket_sender.rs  zbus_gateway_telegraf_sender.rs  zbus_gateway_zabbix_sender.rs  zbus_gateway_zbus_sender.rs  zbus_json.rs  zbus_loader_logs_categorization.rs  zbus_login.rs  zbus_monitor.rs  (+13 more)
src/rhai_lib/: mod.rs
src/rhai_lib/conversions/: mod.rs
src/rhai_lib/dynamicsampler/: mod.rs
src/rhai_lib/filters/: interval.rs  mod.rs
src/rhai_lib/grok/: mod.rs
src/rhai_lib/interval/: mod.rs
src/rhai_lib/metric/: mod.rs
src/rhai_lib/string/: eval.rs  fuzzy.rs  includes.rs  matches.rs  mod.rs  text_text.rs  tokens.rs  tokens_text.rs  zip.rs
src/rhai_lib/timestamp/: mod.rs
src/rhai_lib/zbus_log/: mod.rs
src/stdlib/: alerts.rs  banner.rs  channel.rs  forecast_oscillator.rs  hostname.rs  logs_categorization.rs  metric_samples.rs  mod.rs  sleep.rs  syslog.rs  threads.rs  time.rs  traits.rs  tsf.rs  zabbix.rs  zio.rs
src/stdlib/fixedqueue/: mod.rs
