[package]
name = "zbusdg"
version = "0.1.0"
edition = "2021"
description = "Universal Data Gateway for ZBUS project"
license-file = "LICENSE"
homepage = "https://github.com/vulogov/zbus_universal_data_gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.*", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
log = "0.4.*"
env_logger = "0.10.*"
neofiglet = "0.1.1"
hostname = "0.4.0"
reqwest = { version="0.12.4", features= ["blocking", "json"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
logos = "0.14.0"
tiny_http = "0.12.0"
lazy_static = "1.4.0"
easy-error = "1.0.0"
thread-manager = "1.0.0"
nanoid = "0.4.0"
unit_conversion = "0.2.0"
