[package]
name = "zbusdg"
version = "0.8.0"
edition = "2021"
description = "Universal Data Gateway for ZBUS project"
license-file = "LICENSE"
homepage = "https://github.com/vulogov/zbus_universal_data_gateway"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.*", features = ["derive"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
log = "0.4.*"
env_logger = "0.10.*"
neofiglet = "0.1.1"
hostname = "0.4.0"
reqwest = { version="0.12.4", features= ["blocking", "json"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
logos = "0.14.0"
tiny_http = "0.12.0"
lazy_static = "1.4.0"
easy-error = "1.0.0"
thread-manager = "1.0.0"
nanoid = "0.4.0"
unit_conversion = "0.2.0"
timedmap = "1.0.2"
etime = "0.1.8"
zenoh = "0.10.1-rc"
enquote = "1.1.0"
nats = "0.25.0"
mqtt-protocol = "0.12.0"
statsd = "0.16.0"
telegraf = "0.6.0"
escape_string = "0.1.2"
rhai-sci = "0.2.1"
rhai-rand = "0.1.6"
rhai-fs = "0.1.3"
rhai-url = "0.0.5"
rhai-ml = "0.1.2"
statrs = "0.16.1"
json_value_merge = "2.0.0"
markov-chain = "0.1.1"
decorum = "0.3.1"
anomaly_detection = "0.3.0"
breakout = "0.2.1"
prometheus-parse = "0.2.5"
iset = "0.2.2"
fuzzy-matcher = "0.3.7"
distance = "0.4.0"
voca_rs = "1.15.2"
fancy-regex = "0.13.0"
charabia = "0.8.11"
grok = "2.0.0"
inari = "1.1.0"
mio = "^0.6"
chrono = "0.4.38"
socket2 = { version = "0.3.9", features = ["reuseport"] }
jsonrpc-core = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"

[dependencies.rhai]
version = "1.18.*"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]
